Rewrite DataParser (partially)