@@ -1,13 +1,9 @@
 package ru.dfhub.enigmaircmobile.eirc;
 
-/*
+
 import org.json.JSONObject;
-import ru.dfhub.eirc.util.Encryption;
-import ru.dfhub.eirc.util.NotificationSound;
-import ru.dfhub.eirc.util.ResourcesReader;
-
-
- */
+import ru.dfhub.enigmaircmobile.eirc.util.Encryption;
+import ru.dfhub.enigmaircmobile.eirc.util.ResourcesReader;
 /**
  * Class for working with data and processing it
  */
@@ -16,7 +12,6 @@ public class DataParser {
     /**
      * Types of incoming and outgoing messages
      */
-    /*
     public enum MessageType {
         USER_MESSAGE("user_message"), // User text messages
         USER_SESSION("user_session"); // Messages about user join/leave
@@ -28,7 +23,7 @@ public class DataParser {
         }
 
         private String getResourcesPath() {
-            return "message_templates/%s.json".formatted(this.fileName);
+            return String.format("message_templates/%s.json", this.fileName);
         }
 
         public String getTemplate() {
@@ -36,13 +31,10 @@ public class DataParser {
         }
     }
 
-     */
-
     /**
      * Parse the incoming message and take the necessary action to work with it
      * @param data Raw data from server
      */
-    /*
     public static void handleInputData(String data) {
         JSONObject dataObj;
         try {
@@ -50,20 +42,23 @@ public class DataParser {
         } catch (Exception e) { return; } // Null message from server
 
 
-        switch (dataObj.getString("type")) {
-            case "user-message" -> handleUserMessage(dataObj.getJSONObject("content"));
-            case "user-session" -> handleUserSession(dataObj.getJSONObject("content"));
-            case "server-shutdown" -> Main.handleServerShutdown();
+        switch (dataObj.optString("type")) {
+            case "user-message":
+                handleUserMessage(dataObj.optJSONObject("content"));
+                break;
+            case "user-session":
+                handleUserSession(dataObj.optJSONObject("content"));
+                break;
+            case "server-shutdown":
+                // Main.handleServerShutdown();
+                break;
         }
     }
-
-     */
 
     /**
      * Collect a user message into a data type accepted by the client
      * @param message Message
      */
-    /*
     public static void handleOutputMessage(String message) {
         String template;
         try {
@@ -76,26 +71,25 @@ public class DataParser {
 
         String encryptedMessage;
         try {
-            encryptedMessage = Encryption.encrypt(message);
+            //encryptedMessage = Encryption.encrypt(message);
         } catch (Exception e) {
             Gui.showNewMessage("There was an error sending the message (encrypt process)", Gui.MessageType.SYSTEM_ERROR);
             e.printStackTrace();
             return;
         }
 
+        /*
         Main.getServerConnection().sendToServer(template
-            .replace("%user%", Main.getConfig().getString("username"))
+            .replace("%user%", Config.getConfig().optString("username"))
             .replace("%message%", encryptedMessage)
         );
+         */
     }
-
-     */
 
     /**
      * Process and send a message about your session (join/leave)
      * @param isJoin Is join
      */
-    /*
     public static void handleOutputSession(boolean isJoin) {
         String status = isJoin ? "join" : "leave";
 
@@ -108,55 +102,52 @@ public class DataParser {
             return;
         }
 
+        /*
         Main.getServerConnection().sendToServer(template
-                .replace("%user%", Main.getConfig().getString("username"))
+                .replace("%user%", Config.getConfig().optString("username"))
                 .replace("%status%", status)
         );
+
+         */
     }
-     */
 
     /**
      * Processing an incoming user message
      * @param data Data's "content" object
      */
-    /*
     private static void handleUserMessage(JSONObject data) {
-        String sender = data.getString("user");
-        String encryptedMessage = data.getString("message"); // In ftr, decrypt and handle decryption errors here
+        String sender = data.optString("user");
+        String encryptedMessage = data.optString("message"); // In ftr, decrypt and handle decryption errors here
 
-        String message;
+        String message = "";
         try {
-            message = Encryption.decrypt(encryptedMessage);
+            // message = Encryption.decrypt(encryptedMessage);
         } catch (Exception e) {
             Gui.showNewMessage("Failed to decrypt the incoming message! (wrong encryption key)", Gui.MessageType.SYSTEM_ERROR);
             return;
         }
 
-        String formattedMessage = "%s -> %s".formatted(sender, message); // In ftr, handle timestamps here
+        String formattedMessage = String.format("%s\n%s", sender, message); // In ftr, handle timestamps here
 
-        if (sender.equals(Main.getConfig().getString("username"))) {
+        if (sender.equals(Config.getConfig().optString("username"))) {
             Gui.showNewMessage(formattedMessage, Gui.MessageType.SELF_USER_MESSAGE);
         } else {
             Gui.showNewMessage(formattedMessage, Gui.MessageType.USER_MESSAGE);
         }
         Gui.scrollDown();
-        if (Gui.isMinimized() && Main.getConfig().optBoolean("notification-sounds", true)) NotificationSound.play();
     }
-     */
 
     /**
      * Handle input user-session(join/leave) message and show it
      * @param data Data's "content" object
      */
-    /*
     private static void handleUserSession(JSONObject data) {
-        String user = data.getString("user");
-        String status = data.getString("status").equals("join") ? "joined!" : "left.";
+        String user = data.optString("user");
+        String status = data.optString("status").equals("join") ? "joined!" : "left.";
 
-        String formattedMessage = "%s %s".formatted(user, status);
+        String formattedMessage = String.format("%s %s", user, status);
 
         Gui.showNewMessage(formattedMessage, Gui.MessageType.USER_SESSION);
         Gui.scrollDown();
     }
-     */
 }
